--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -18,7 +18,8 @@ $color-glacier-1: #dae8f5;
 $color-tangaroa: #1A3B70;
 $color-tangaroa-alfa: rgba(1, 28, 64, 0.7);
 $color-neon-blue: #2c39f2;
-$color-torch-red: #ff1553;
+$color-light-blue: #759CDC;
+$color-light-blue-2: #C1D8FF;
 $color-tangerine: #e59700;
 $background-overlay: rgba(0, 43, 102, 0.5);
 
