feat: добавляет секцию маршруты

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,4 +24,5 @@
 @import "blocks/hero";
 @import "blocks/title";
 @import "blocks/yacht";
+@import "blocks/routes";
 // ---------------------------------
