feat: добавляет секцию

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,4 +25,5 @@
 @import "blocks/title";
 @import "blocks/yacht";
 @import "blocks/routes";
+@import "blocks/services";
 // ---------------------------------
