--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,4 +26,5 @@
 @import "blocks/yacht";
 @import "blocks/routes";
 @import "blocks/services";
+@import "blocks/map";
 // ---------------------------------
