feat: добавляет попап

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,4 +27,5 @@
 @import "blocks/routes";
 @import "blocks/services";
 @import "blocks/map";
+@import "blocks/popup";
 // ---------------------------------
