--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,4 +28,6 @@
 @import "blocks/services";
 @import "blocks/map";
 @import "blocks/popup";
+@import "blocks/routs-item";
+@import "blocks/baguetteBox";
 // ---------------------------------
